# lithe

./: .gitmodules  NOTES.md  README.md  package-lock.json  package.json  test.svelte
lib/: .gitignore  Cargo.toml
lib/src/: lib.rs  lib_native.rs  lib_wasm.rs
lib/src/compiler/: compiler.rs  mod.rs  preprocessor.rs
lib/src/compiler/constants/: imports.rs  mod.rs
lib/src/compiler/renderer/: dom_renderer.rs  mod.rs  renderer.rs
lib/src/compiler/utils/: fix_attribute_casing.rs  i18n.rs  mod.rs  script.rs  strings.rs
performance_tests/: .gitignore  README.md  example.js  extract.rb  minify.mjs  package-lock.json  package.json  test.mjs
scripts/: build_native.sh  build_wasm.sh  diff.sh  generate_svelte_file.rb  grab_random_test.rb  install.sh  test.sh
test/: .gitignore  README.md  compare.rb  package-lock.json  package.json  test.mjs
test/scripts/: compare.rb  extract.rb  stats.rb
