[package]
edition = "2021"
name = "lithe"
version = "0.1.0"

[features]
wasm = ["wasm-bindgen"]

[dependencies]
html_parser = "*"
lazy_static = "*"
libc = "*"
nom = "*"
regex = "*"
serde = "*"
serde_json = "*"

[dependencies.wasm-bindgen]
version = "*"
optional = true

[dependencies.web-sys]
version = "0.3.55"
features = [
  "console",
]

[dependencies.log]
features = ["max_level_info", "release_max_level_info"]
version = "*"

[lib]
crate-type = ["cdylib"]
name = "lithe"